--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,94 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+.container {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.input-field {
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 300px;
+}
+
+.modal-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+
+  .modal-header {
+    height: 30px;
+    font-size: 1.3em;
+  }
+
+  .modal-content {
+    flex: 1;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+
+.buttons-footer {
+  height: 55px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+
+  button {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+}
+
+.table {
+  flex: 1;
+  max-width: 800px;
+
+  table {
+    width: 100%;
+
+    tbody {
+      max-height: 600px;
+      overflow: auto;
+    }
+  }
+}
+
+// Material CSS override
+.mat-form-field-wrapper {
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+.mat-dialog-container {
+  padding-bottom: 5px !important;
+}
+
+.mat-button-wrapper {
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: center !important;
+  justify-content: center !important;
+
+  mat-icon:not(.icon-button) {
+    margin-right: 5px;
+    margin-left: -5px;
+  }
+}
+
+mat-paginator {
+  margin-top: 10px !important;
+}
