--- a/src/app/features/students/students-list/students-list.component.html
+++ b/src/app/features/students/students-list/students-list.component.html
@@ -1,45 +1,3 @@
 <div class="container">
-  <div class="table">
-    <app-filter (onFilter)="onFilter($event)"></app-filter>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z3">
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Nome</th>
-        <td mat-cell *matCellDef="let student">{{ student.name }}</td>
-      </ng-container>
-      <ng-container matColumnDef="class">
-        <th mat-header-cell *matHeaderCellDef>Classe</th>
-        <td mat-cell *matCellDef="let student">{{ student.class.name }}</td>
-      </ng-container>
-      <ng-container matColumnDef="degree">
-        <th mat-header-cell *matHeaderCellDef>Grau</th>
-        <td mat-cell *matCellDef="let student">{{ student.degree.name }}</td>
-      </ng-container>
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef style="width: 15%; text-align: center">Ações</th>
-        <td mat-cell *matCellDef="let student" style="width: 15%; text-align: center">
-          <button mat-icon-button (click)="openEditDialog(student)" color="primary">
-            <mat-icon class="icon-button">edit</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="columns"></tr>
-      <tr mat-row *matRowDef="let rowData; columns: columns"></tr>
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">Nenhum item encontrado"</td>
-      </tr>
-    </table>
-    <mat-paginator showFirstLastButtons hidePageSize [pageSize]="7"></mat-paginator>
-    <div class="buttons-footer">
-      <div style="width: 80%; display: flex; justify-content: flex-start">
-        <button mat-raised-button (click)="generateRandomStudents()" color="accent">
-          <mat-icon>add</mat-icon> Alunos aleatórios
-        </button>
-        <button mat-raised-button (click)="openChartModal()">
-          <mat-icon>bar_chart</mat-icon> Gráfico Alunos x Classe
-        </button>
-      </div>
-      <button mat-raised-button color="primary" (click)="saveStudents()"><mat-icon>download</mat-icon> Salvar</button>
-      <button mat-raised-button (click)="reset()">Resetar</button>
-    </div>
-  </div>
+  <app-students-table [inputList]="studentsList"></app-students-table>
 </div>
