--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,9 @@ body {
     flex: 1;
     margin-top: 20px;
     margin-bottom: 20px;
+    overflow-y: auto;
+    padding: 7px;
+    max-height: 400px;
   }
 }
 
