--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,11 +10,10 @@ body {
 }
 
 .container {
-  display: flex;
   flex: 1;
+  display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
+  margin-top: 2%;
 }
 
 .input-field {
